--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -128,7 +128,7 @@ const older = posts.contents[current_index + 1] ?? null;
     }),
     categoryId: blog.category.id ?? "",
     categoryName: blog.category.name ?? "",
-    lcp: lcp ?? null,
+    lcp: lcp ? lcp : null,
   }}
   newer={newer}
   older={older}
