--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -130,7 +130,7 @@ const older = posts.contents[current_index + 1] ?? null;
     }),
     categoryId: blog.category.id ?? "",
     categoryName: blog.category.name ?? "",
-    lcp: (typeof lcp !== 'undefined'| lcp !== "" | lcp = null) ? lcp : null,
+    lcp: (typeof lcp !== 'undefined'| lcp !== "" | lcp !== null) ? lcp : null,
   }}
   newer={newer}
   older={older}
