--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -61,7 +61,7 @@ $("pre code").each((_, elm) => {
   $(elm).addClass("hljs");
 });
 
-const lcp = "";
+let lcp = "";
 
 $("img").each((index, elm) => {
   const src = $(elm).attr("src");
