--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -57,8 +57,8 @@ const href_list2 = [`?fm=webp&w=640`,`?fm=webp&w=750`,`?fm=webp&w=828`,`?fm=webp
         margin: 1rem 0;
       }
     </style>
-    {heroImage ? href_list.map((href_elm) => <link rel="preload" as="image" href={heroImage + href_elm} />):null}
-    {lcp ? href_list2.map((href_elm2) => <link rel="preload" as="image" href={lcp + href_elm2} />):null}
+    <!-- {heroImage ? href_list.map((href_elm) => <link rel="preload" as="image" href={heroImage + href_elm} />):null} -->
+    <!-- {lcp ? href_list2.map((href_elm2) => <link rel="preload" as="image" href={lcp + href_elm2} />):null} -->
   </head>
 
   <body>
