--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -49,7 +49,7 @@ const { page } = Astro.props;
         margin: 1em auto;
       }
     </style>
-    <PreloadFirstPostEyecatch posts={page.data} />
+    <!-- <PreloadFirstPostEyecatch posts={page.data} /> -->
   </head>
   <body>
     <Header />
