--- a/src/pages/category/[categoryId]/[...page].astro
+++ b/src/pages/category/[categoryId]/[...page].astro
@@ -81,7 +81,7 @@ const category = await cmsBlog.getCategoryDetail(params.categoryId as string);
         margin-top: 0;
       }
     </style>
-    <PreloadFirstPostEyecatch posts={page.data} />
+    <!-- <PreloadFirstPostEyecatch posts={page.data} /> -->
   </head>
   <body>
     <Header />
