--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -12,7 +12,7 @@ const isActive = href === pathname || href === pathname.replace(/\/$/, "");
 </a>
 <style>
   a {
-    display: inline-block;
+    /*display: inline-block;*/
     text-decoration: none;
   }
   a.active {
