--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -36,8 +36,26 @@ const {
   newer,
   older,
 } = Astro.props;
-const href_list = [`?fm=webp&fit=crop&crop=top&w=640&h=320`,`?fm=webp&fit=crop&crop=top&w=750&h=375`,`?fm=webp&fit=crop&crop=top&w=828&h=414`,`?fm=webp&fit=crop&crop=top&w=1080&h=540`,`?fm=webp&fit=crop&crop=top&w=1200&h=600`,`?fm=webp&fit=crop&crop=top&w=1920&h=960`,`?fm=webp&fit=crop&crop=top&w=2048&h=1024`,`?fm=webp&fit=crop&crop=top&w=3840&h=1920`,];
-const href_list2 = [`?fm=webp&w=640`,`?fm=webp&w=750`,`?fm=webp&w=828`,`?fm=webp&w=1080`,`?fm=webp&w=1200`,`?fm=webp&w=1920`,`?fm=webp&w=2048`,`?fm=webp&w=3840`,];
+const href_list = [
+  `?fm=webp&fit=crop&crop=top&w=640&h=320`,
+  `?fm=webp&fit=crop&crop=top&w=750&h=375`,
+  `?fm=webp&fit=crop&crop=top&w=828&h=414`,
+  `?fm=webp&fit=crop&crop=top&w=1080&h=540`,
+  `?fm=webp&fit=crop&crop=top&w=1200&h=600`,
+  `?fm=webp&fit=crop&crop=top&w=1920&h=960`,
+  `?fm=webp&fit=crop&crop=top&w=2048&h=1024`,
+  `?fm=webp&fit=crop&crop=top&w=3840&h=1920`,
+];
+const href_list2 = [
+  `?fm=webp&w=640`,
+  `?fm=webp&w=750`,
+  `?fm=webp&w=828`,
+  `?fm=webp&w=1080`,
+  `?fm=webp&w=1200`,
+  `?fm=webp&w=1920`,
+  `?fm=webp&w=2048`,
+  `?fm=webp&w=3840`,
+];
 ---
 
 <html lang="ja">
@@ -66,7 +84,19 @@ const href_list2 = [`?fm=webp&w=640`,`?fm=webp&w=750`,`?fm=webp&w=828`,`?fm=webp
     <main class="main">
       <Sidebar />
       <article class="contents">
-        {heroImage && <img width={720} height={360} data-src={`${heroImage}?fm=webp`} data-srcset={`${heroImage}?fm=webp&fit=crop&crop=top&w=640&h=320 640w, ${heroImage}?fm=webp&fit=crop&crop=top&w=750&h=375 750w, ${heroImage}?fm=webp&fit=crop&crop=top&w=828&h=414 828w, ${heroImage}?fm=webp&fit=crop&crop=top&w=1080&h=540 1080w, ${heroImage}?fm=webp&fit=crop&crop=top&w=1200&h=600 1200w, ${heroImage}?fm=webp&fit=crop&crop=top&w=1920&h=960 1920w, ${heroImage}?fm=webp&fit=crop&crop=top&w=2048&h=1024 2048w, ${heroImage}?fm=webp&fit=crop&crop=top&w=3840&h=1920 3840w`} alt="" class="lazyload" loading="auto" /> }
+        {
+          heroImage && (
+            <img
+              width={720}
+              height={360}
+              data-src={`${heroImage}?fm=webp`}
+              data-srcset={`${heroImage}?fm=webp&fit=crop&crop=top&w=640&h=320 640w, ${heroImage}?fm=webp&fit=crop&crop=top&w=750&h=375 750w, ${heroImage}?fm=webp&fit=crop&crop=top&w=828&h=414 828w, ${heroImage}?fm=webp&fit=crop&crop=top&w=1080&h=540 1080w, ${heroImage}?fm=webp&fit=crop&crop=top&w=1200&h=600 1200w, ${heroImage}?fm=webp&fit=crop&crop=top&w=1920&h=960 1920w, ${heroImage}?fm=webp&fit=crop&crop=top&w=2048&h=1024 2048w, ${heroImage}?fm=webp&fit=crop&crop=top&w=3840&h=1920 3840w`}
+              alt=""
+              class="lazyload"
+              loading="lazy"
+            />
+          )
+        }
         <h1 class="title">{title}</h1>
         {pubDate && <time>{pubDate}</time>}
         {
@@ -126,7 +156,13 @@ const href_list2 = [`?fm=webp&w=640`,`?fm=webp&w=750`,`?fm=webp&w=828`,`?fm=webp
               href="https://misskeyshare.link/share.html?text="
               onclick="window.open(this.href + encodeURI(decodeURI(document.title)) + '&url=' + encodeURI(decodeURI(location.href)), '', 'width=500,height=400'); return false; "
               aria-label="Misskey"
-              ><img src="/mi.webp" style="" alt="Misskey_icon" width="20px" height="14px"/></a
+              ><img
+                src="/mi.webp"
+                style=""
+                alt="Misskey_icon"
+                width="20px"
+                height="14px"
+              /></a
             >
           </span>
           <span class="line">
@@ -211,8 +247,7 @@ const href_list2 = [`?fm=webp&w=640`,`?fm=webp&w=750`,`?fm=webp&w=828`,`?fm=webp
             class="btn text-white"
             href="https://donshare.net/share.html?text="
             onclick="window.open(this.href + encodeURI(decodeURI(document.title)) + '&url=' + encodeURI(decodeURI(location.href)), '', 'width=500,height=400'); return false; "
-            aria-label="Mastodon"
-            ><i class="fab fa-mastodon fa-fw"></i></a
+            aria-label="Mastodon"><i class="fab fa-mastodon fa-fw"></i></a
           >
         </span>
         <span class="misskey">
@@ -220,7 +255,12 @@ const href_list2 = [`?fm=webp&w=640`,`?fm=webp&w=750`,`?fm=webp&w=828`,`?fm=webp
             href="https://misskeyshare.link/share.html?text="
             onclick="window.open(this.href + encodeURI(decodeURI(document.title)) + '&url=' + encodeURI(decodeURI(location.href)), '', 'width=500,height=400'); return false; "
             aria-label="Misskey"
-            ><img src="/mi.webp" alt="Misskey_icon" width="20px" height="14px"/></a
+            ><img
+              src="/mi.webp"
+              alt="Misskey_icon"
+              width="20px"
+              height="14px"
+            /></a
           >
         </span>
         <span class="line">
