--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -122,7 +122,8 @@ if (
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
+<link rel="icon" href="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/3cbc0685289f435e961ab32d00058ad2/favicon.ico" />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Primary Meta Tags -->
