add icon to header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,6 +27,7 @@ const { contents: links } = await cmsBlog.getLinks({
 <header>
   <div class="navbar">
     <a href="/" class="">
+      <img alt="icon" width="32" height="32" src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/3cbc0685289f435e961ab32d00058ad2/favicon.ico">
       <h2 class="site_title">
         {SITE_TITLE}
       </h2>
