--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,6 +2,7 @@
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
 import "../styles/global.css";
+import { ICON } from "../config";
 
 export interface Props {
   title: string;
@@ -123,7 +124,7 @@ if (
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
-<link rel="icon" href="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/3cbc0685289f435e961ab32d00058ad2/favicon.ico" />
+<link rel="icon" href={ICON} />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Primary Meta Tags -->
