--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,7 +2,7 @@
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
 import "../styles/global.css";
-import { ICON } from "../config";
+import { FAVICON } from "../config";
 
 export interface Props {
   title: string;
@@ -124,7 +124,7 @@ if (
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
-<link rel="icon" href={ICON} />
+<link rel="icon" href={FAVICON} />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Primary Meta Tags -->
