--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,7 +28,7 @@ const { contents: links } = await cmsBlog.getLinks({
   <div class="navbar">
     <a href="/" class="">
       <h2 class="site_title">
-      <img alt="icon" width="25" height="25" src={ICON_HEADER}>
+      <img alt="icon" width="25" height="25" src={`${ICON_HEADER}?fm=webp&fit=clip&w=25&h=25`}>
 
         {SITE_TITLE}
       </h2>
