changed about share buttons

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,6 +4,7 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Sidebar from "../components/Sidebar.astro";
 import GoogleResponsiveAd from "../components/GoogleResponsiveAd";
+import ShareButtons from "../components/ShareButtons.astro";
 import { SITE_TITLE } from "../config";
 import type { Blog } from "../library/microcms";
 
@@ -115,203 +116,10 @@ const href_list2 = [
             </div>
           )
         }
-        <div class="spans">
-          <span class="tweet">
-            <a
-              href={`https://twitter.com/intent/tweet?url=%0a${
-                Astro.request.url
-              }&text=${encodeURI(`${title} | ${SITE_TITLE}`)}`}
-              class="tweet_button"
-              data-show-count="false"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="Twitter"
-            >
-              <i class="fa-brands fa-x-twitter"></i>
-            </a>
-          </span>
-          <span class="facebook">
-            <a
-              href={`http://www.facebook.com/share.php?u=${Astro.request.url}`}
-              class="facebook_button"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="Facebook"
-            >
-              <i class="fa-brands fa-facebook"></i>
-            </a>
-          </span>
-          <span class="mastodon">
-            <a
-              class="btn text-white"
-              href="https://donshare.net/share.html?text="
-              onclick="window.open(this.href + encodeURI(decodeURI(document.title)) + '&url=' + encodeURI(decodeURI(location.href)), '', 'width=500,height=400'); return false; "
-              aria-label="Mastodon"
-            >
-              <i class="fab fa-mastodon fa-fw"></i>
-            </a>
-          </span>
-          <span class="misskey">
-            <a
-              href="https://misskeyshare.link/share.html?text="
-              onclick="window.open(this.href + encodeURI(decodeURI(document.title)) + '&url=' + encodeURI(decodeURI(location.href)), '', 'width=500,height=400'); return false; "
-              aria-label="Misskey"
-              ><img
-                src="/mi.webp"
-                style=""
-                alt="Misskey_icon"
-                width="20px"
-                height="14px"
-              /></a
-            >
-          </span>
-          <span class="line">
-            <a
-              href={`http://line.me/R/msg/text/?${
-                Astro.request.url
-              }%0a${encodeURI(`${title} | ${SITE_TITLE}`)}`}
-              class="line_button"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="LINE"
-            >
-              <i class="fa-brands fa-line"></i>
-            </a>
-          </span>
-          <span class="pocket">
-            <a
-              href={`http://getpocket.com/edit?url=${
-                Astro.request.url
-              }&title=${encodeURI(`${title} | ${SITE_TITLE}`)}`}
-              class="pocket_button"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="Pocket"
-            >
-              <i class="fa-brands fa-get-pocket"></i>
-            </a>
-          </span>
-          <span class="feedly">
-            <a
-              href="https://feedly.com/i/subscription/feed%2Fhttps%3A%2F%2Fwww.vermilion3.xyz%2Ffeed.xml"
-              target="blank"
-              ><img
-                id="feedlyFollow"
-                src="https://s1.feedly.com/legacy/feedly-follow-square-flat-green_2x.png"
-                alt="follow us in feedly"
-                width="28"
-                height="28"
-              /></a
-            >
-          </span>
-          <span class="rss">
-            <a
-              href="/feed.xml"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="RSS feed"
-            >
-              <i class="fa-sharp fa-solid fa-rss"></i>
-            </a>
-          </span>
-        </div>
+        <ShareButtons title={title} />
         <hr />
         <slot />
-        <span class="tweet">
-          <a
-            href={`https://twitter.com/intent/tweet?url=%0a${
-              Astro.request.url
-            }&text=${encodeURI(`${title} | ${SITE_TITLE}`)}`}
-            class="tweet_button"
-            data-show-count="false"
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="Twitter"
-          >
-            <i class="fa-brands fa-x-twitter"></i>
-          </a>
-        </span>
-        <span class="facebook">
-          <a
-            href={`http://www.facebook.com/share.php?u=${Astro.request.url}`}
-            class="facebook_button"
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="Facebook"
-          >
-            <i class="fa-brands fa-facebook"></i>
-          </a>
-        </span>
-        <span class="mastodon">
-          <a
-            class="btn text-white"
-            href="https://donshare.net/share.html?text="
-            onclick="window.open(this.href + encodeURI(decodeURI(document.title)) + '&url=' + encodeURI(decodeURI(location.href)), '', 'width=500,height=400'); return false; "
-            aria-label="Mastodon"><i class="fab fa-mastodon fa-fw"></i></a
-          >
-        </span>
-        <span class="misskey">
-          <a
-            href="https://misskeyshare.link/share.html?text="
-            onclick="window.open(this.href + encodeURI(decodeURI(document.title)) + '&url=' + encodeURI(decodeURI(location.href)), '', 'width=500,height=400'); return false; "
-            aria-label="Misskey"
-            ><img
-              src="/mi.webp"
-              alt="Misskey_icon"
-              width="20px"
-              height="14px"
-            /></a
-          >
-        </span>
-        <span class="line">
-          <a
-            href={`http://line.me/R/msg/text/?${
-              Astro.request.url
-            }%0a${encodeURI(`${title} | ${SITE_TITLE}`)}`}
-            class="line_button"
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="LINE"
-          >
-            <i class="fa-brands fa-line"></i>
-          </a>
-        </span>
-        <span class="pocket">
-          <a
-            href={`http://getpocket.com/edit?url=${
-              Astro.request.url
-            }&title=${encodeURI(`${title} | ${SITE_TITLE}`)}`}
-            class="pocket_button"
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="Pocket"
-          >
-            <i class="fa-brands fa-get-pocket"></i>
-          </a>
-        </span>
-        <span class="feedly">
-          <a
-            href="https://feedly.com/i/subscription/feed%2Fhttps%3A%2F%2Fwww.vermilion3.xyz%2Ffeed.xml"
-            target="blank"
-            ><img
-              id="feedlyFollow"
-              src="https://s1.feedly.com/legacy/feedly-follow-square-flat-green_2x.png"
-              alt="follow us in feedly"
-              width="28"
-              height="28"
-            /></a
-          >
-        </span>
-        <span class="rss">
-          <a
-            href="/feed.xml"
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="RSS feed"
-          >
-            <i class="fa-sharp fa-solid fa-rss"></i>
-          </a>
-        </span>
+        <ShareButtons title={title} />
         <nav class="newer_home_older">
           <ul>
             <li>
