changed about taittsuu button

--- a/src/components/ShareButtons.astro
+++ b/src/components/ShareButtons.astro
@@ -69,7 +69,7 @@ const { title } = Astro.props;
       aria-label="taittsuu"
     >
       <img
-        src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/341d4d96dd024a9991de56270781695a/kari_icon.png"
+        src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/341d4d96dd024a9991de56270781695a/kari_icon.png?fm=webp&fit=clip&w=20&h=14"
         width="20px"
         height="14px"
         alt="taittsuu_icon"
