change about theme

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,6 +13,7 @@ const today = new Date();
 </style>
 <script>
   import "../scripts/menu.js";
+  import "../scripts/mode_switch.js";
 </script>
 <script>
   import "lazysizes";
