--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,7 +9,7 @@ body {
   padding: 20px;
   max-width: 65ch;
   text-align: left;
-  background-color: #fff;
+  background-color: #ffffffa1;
   word-wrap: break-word;
   overflow-wrap: break-word;
   line-height: 1.5;
@@ -74,7 +74,7 @@ header {
   max-width: 65ch;
   position: relative;
   top: 0;
-  /* background-color: #fff; */
+  /* background-color: #ffffffa1; */
 }
 header h2 {
   margin: 0.5em 0;
@@ -85,7 +85,7 @@ header h2 {
   right: 10px;
   margin-top: 0;
   cursor: pointer;
-  background-color: #fff;
+  background-color: #ffffffa1;
 }
 
 .hamburger .line {
@@ -107,7 +107,7 @@ header h2 {
   top: -0rem;
   /* left: 48px; */
   left: 0;
-  background-color: #fff;
+  background-color: #ffffffa1;
   display: none;
   margin: 0;
   position: relative;
@@ -397,7 +397,7 @@ a:focus {
   vertical-align: middle;
   font-size: 20px;
   text-decoration: none;
-  color: #000;
+  color: #2c2c30;
   margin: 8px;
 }
 
@@ -405,7 +405,7 @@ a:focus {
   height: 20px;
   width: 20px;
   padding: 1px;
-  background-color: #fff;
+  background-color: #ffffffa1;
 }
 
 .rss a {
@@ -502,7 +502,7 @@ div[data-filename] {
 
 div[data-filename] > span {
   display: inline-block;
-  background-color: #1D1F21;
+  background-color: #1d1f21;
   color: #dfdfdf;
   text-align: center;
   padding: 3px 15px;
@@ -515,56 +515,77 @@ div[data-filename] > pre {
 }
 /* pre {
   background-color: #1A2638;
-  color: #fff;
+  color: #ffffffa1;
   overflow: scroll;
 } */
 
+.switch_and_hamburger {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 code {
-  background-color: #1D1F21;
+  background-color: #1d1f21;
   color: #dfdfdf;
 }
 
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: #000 !important;
-    color: #fff !important;
-  }
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  strong,
-  b {
-    color: #fff;
-  }
-  .contents main a {
-    color: #fff !important;
-  }
-  a div.description {
-    color: #fff !important;
-  }
-  .published_time_span time {
-    color: #fff !important;
-  }
-  blockquote {
-    color: #fff !important;
-  }
-  .hamburger {
-    background-color: #000;
-  }
+/* for checkbox */
+input[type="checkbox"] {
+  display: none;
+}
+.switch {
+  position: relative;
+  display: block;
+  width: 3rem;
+}
+.switch-label {
+  cursor: pointer;
+}
+.switch-mode {
+  display: block;
+  font-size: 1.5em;
+  /* transform: rotate(0);
+  transition: transform 1s; */
+}
 
-  .hamburger .line {
-    background-color: #fff;
-  }
-  .wavebox img {
-    background-color: #fff;
-  }
-
-  .tweet a {
-    color: #fff;
-  }
+body[data-theme="dark"] {
+  background-color: #2c2c30 !important;
+  color: #ffffffa1 !important;
+}
+body[data-theme="dark"] h1,
+body[data-theme="dark"] h2,
+body[data-theme="dark"] h3,
+body[data-theme="dark"] h4,
+body[data-theme="dark"] h5,
+body[data-theme="dark"] h6,
+body[data-theme="dark"] strong,
+body[data-theme="dark"] b {
+  color: #ffffffa1;
+}
+body[data-theme="dark"] .contents main a {
+  color: #ffffffa1 !important;
+}
+body[data-theme="dark"] a div.description {
+  color: #ffffffa1 !important;
+}
+body[data-theme="dark"] .published_time_span time {
+  color: #ffffffa1 !important;
+}
+body[data-theme="dark"] blockquote {
+  color: #ffffffa1 !important;
+}
+body[data-theme="dark"] .hamburger {
+  background-color: #2c2c30;
+}
+body[data-theme="dark"] .hamburger .line {
+  background-color: #ffffffa1;
+}
+body[data-theme="dark"] .wavebox img {
+  background-color: #ffffffa1;
+}
+body[data-theme="dark"] .tweet a {
+  color: #ffffffa1;
 }
 
 @media screen and (min-width: 636px) {
@@ -619,6 +640,10 @@ code {
   .contents {
     width: 80%;
     margin: 0 1rem;
+  }
+
+  .navbar {
+    justify-content: normal;
   }
 
   .hamburger {
