add notify about adsense and add setting of devcontainer and update packages

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -118,6 +118,9 @@ const href_list2 = [
           )
         }
         <ShareButtons title={title} />
+        <div class="notify">
+          このブログではGoogle Adsenseを使ったアフェリエイト広告を導入しています
+        </div>
         <hr />
         <slot />
         <ShareButtons title={title} />
