--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -79,14 +79,17 @@ $("img").each((index, elm) => {
     $(elm).attr("data-src", srcWithoutQuery + webpQueryParam);
     // data-srcsetを設定
     // $(elm).attr("data-srcset",`${srcWithoutQuery+webpQueryParam}&w=640 640w, ${srcWithoutQuery+webpQueryParam}&w=750 750w, ${srcWithoutQuery+webpQueryParam}&w=828 828w, ${srcWithoutQuery+webpQueryParam}&w=1080 1080w, ${srcWithoutQuery+webpQueryParam}&w=1200 1200w, ${srcWithoutQuery+webpQueryParam}&w=1920 1920w, ${srcWithoutQuery+webpQueryParam}&w=2048 2048w, ${srcWithoutQuery+webpQueryParam}&w=3840 3840w`);
-    $(elm).attr("data-srcset",`${srcWithoutQuery+webpQueryParam}&w=${width} ${width}w`);
+    $(elm).attr(
+      "data-srcset",
+      `${srcWithoutQuery + webpQueryParam}&w=${width} ${width}w`
+    );
     // $(elm).attr("data-sizes","100vw");
-    $(elm).attr("data-sizes","auto");
-    if(index===0){
-      $(elm).attr("loading","eager");
+    $(elm).attr("data-sizes", "auto");
+    if (index === 0) {
+      $(elm).attr("loading", "eager");
       lcp = srcWithoutQuery;
-    }else{
-      $(elm).attr("loading","lazy");
+    } else {
+      $(elm).attr("loading", "lazy");
     }
   }
 });
@@ -133,7 +136,10 @@ const older = posts.contents[current_index + 1] ?? null;
     }),
     categoryId: blog.category.id ?? "",
     categoryName: blog.category.name ?? "",
-    lcp: (typeof lcp !== 'undefined' && lcp !== "" && lcp !== null) ? lcp : undefined,
+    lcp:
+      typeof lcp !== "undefined" && lcp !== "" && lcp !== null
+        ? lcp
+        : undefined,
   }}
   newer={newer}
   older={older}
