--- a/src/components/ShareButtons.astro
+++ b/src/components/ShareButtons.astro
@@ -28,7 +28,7 @@ const { title } = Astro.props;
     <a
       href={`https://bsky.app/intent/compose?text=${
         Astro.request.url
-      }\n${encodeURI(`${title} | ${SITE_TITLE}`)}`}
+      } ${encodeURI(`${title} | ${SITE_TITLE}`)}`}
       class="bsky_button"
       data-show-count="false"
       target="_blank"
@@ -36,6 +36,20 @@ const { title } = Astro.props;
       aria-label="bluesky"
     >
       <i class="fa-brands fa-bluesky"></i>
+    </a>
+  </span>
+  <span class="threads">
+    <a
+      href={`https://www.threads.net/intent/post?text=${
+        Astro.request.url
+      } ${encodeURI(`${title} | ${SITE_TITLE}`)}`}
+      class="threads_button"
+      data-show-count="false"
+      target="_blank"
+      rel="noopener noreferrer"
+      aria-label="threads"
+    >
+      <i class="fa-brands fa-threads"></i>
     </a>
   </span>
   <span class="facebook">
